--- a/css/styles.css
+++ b/css/styles.css
@@ -37,10 +37,64 @@ img {
   padding-right: 30px;
 }
 
-.page-header {
-  padding-top: 36px;
-  padding-bottom: 100px;
+/* USER NAV */
+
+.user-header {
+  max-width: 1600px;
+  display: flex;
+  align-items: center;
+  background-color: var(--accent-color);
+  height: 50px;
+  padding-right: 170px;
+  padding-left: 170px;
 }
+
+.user-nav {
+  display: flex;
+  margin-left: auto;
+}
+
+.tel-link {
+  text-decoration: none;
+  font-family: var(--rubric-font);
+  font-size: 14px;
+  line-height: 0.785;
+  font-weight: 300;
+  color: var(--white-color);
+  margin-right: 70px;
+}
+
+.mail-link {
+  text-decoration: none;
+  font-family: var(--rubric-font);
+  font-size: 14px;
+  line-height: 0.785;
+  font-weight: 300;
+  color: var(--white-color);
+}
+
+.user-nav-item:last-child {
+  margin-right: 0;
+}
+
+.user-nav-link {
+  text-decoration: none;
+  font-family: var(--rubric-font);
+  font-size: 14px;
+  line-height: 0.785;
+  font-weight: 300;
+  color: var(--white-color);
+  padding: 5px 18px;
+  /* border: 2px solid transparent;
+  border-radius: 20px; */
+}
+
+.user-nav-link:hover,
+.user-nav-link:focus {
+  /* border: 2px solid var(--white-color); */
+  /* font-weight: 700; */
+}
+
 /* SITE NAV */
 
 .site-nav {
@@ -87,6 +141,30 @@ img {
 .nav-link:hover,
 .nav-link:focus {
   color: var(--accent-color);
+}
+
+/* BANNER */
+
+.banner {
+  max-width: 1600px;
+  height: 600px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(../images/banner.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #000;
+}
+
+/* HERO */
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 /* FEATURED PRODUCTS */
