--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,7 @@ img {
 }
 
 .user-nav-link {
+  display: block;
   text-decoration: none;
   font-family: var(--rubric-font);
   font-size: 14px;
@@ -260,18 +261,17 @@ img {
   font-family: var(--general-font);
   color: var(--white-color);
   font-weight: 300;
-  background-color: var(--accent-color);
   padding: 16px 30px;
   width: 120px;
   min-height: 40px;
+  border: 1px solid var(--white-color);
   cursor: pointer;
-  transform: scale(1);
-  transition: transform 150ms linear;
 }
 
 .hero-link:hover,
 .hero-link:focus {
-  transform: scale(1.1);
+  background-color: var(--accent-color);
+  border: none;
 }
 
 /* advantages */
